2006-11-01  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/log.c: LogFlush now accepts one extra argument that
	controls internal locking. Previously, the locking was
	done based on the value of the passed callback list and
	that was not correct.

2006-10-30  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/set/c: Updated Ns_SetGetValue/Ns_SetIGetValue  to return default
        value if returned value is NULL or empty string

2006-10-20  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/http.tcl: Fixed bug in proxy handler not returning after redirect and
	updated ns_httpopen not to include Host: header if it already exists

2006-10-19  Bernd Eidenschink  <eide@users.sf.net>

	* contrib/start-scripts/naviserver.SuSE: Renamed a variable that
	prohibited starting the server in chroot mode.

2006-10-17  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/http.tcl: Added chunked support, ns_httpget will return
	only data without chunked headers

2006-10-09  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tcl/file.tcl: Fixed variable typo.
	* nsd/log.c: Avoid holding lock during callback invocation.
	* test/ns_log.test: Added test for callbacks.
	
2006-10-07  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/file.tcl: Invalidate cache proc on Tcl error

2006-10-06  Stephen Deasey  <sdeasey@users.sf.net>

	* m4/tcl.m4: Update to latest from Tcl CVS. No more annoying
	messages about underquoted macros when generating the build
	scripts!

2006-10-05  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/ns_memoize.man: Add description of the memoize
	commands. (All 3 commands described in a single man page.)

	* doc/src/version_include.in:
	* configure.in: Set a variable "version" and substitute the
	PACKAGE_VERSION into it.
	* doc/src/ns_memoize.man: Use the version variable.

2006-10-04  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/binder.c: Make UDP sockets support broadcast option by default

2006-10-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
